objects/NetworkAdoptionSnapshot__c.object
<CustomObject>
    <description>Captures accounts with their live dates and relationship and used by YBN to display network adoption</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveCount__c</fullName>
        <label>Live Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveDate__c</fullName>
        <label>Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NetworkCount__c</fullName>
        <label>Network Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PpcCount__c</fullName>
        <label>PPC Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RunDate__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YBNRelationship__c</fullName>
        <label>YBN Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Network Adoption Snapshot</label>
    <nameField>
        <displayFormat>YRS-{0000000}</displayFormat>
        <label>YBN Relationship Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network Adoption Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>